--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
+{sub_dirs,["deps","apps"]}.
+{lib_dirs,["apps"]}.
+{deps_dir,["deps"]}.
 {deps, [
-    {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
-    {cfgsrv, ".*", {git, "git://github.com/voxoz/cfgsrv.git", "master"}}
 ]}.
