--- a/apps/releaseman/priv/application.config
+++ b/apps/releaseman/priv/application.config
@@ -5,10 +5,10 @@
 ]}.
 
 {github, [
-    {username, "login"}, %% Github login
-    {email, "email"}, %% Github email
-    {password, "m3g1p1$$w0rd"}, %% Github password
-    {repository, "repo_name, not url!"} %% Name of the repository with the app you want to run at your server
+    {username, "5HT"}, %% Github login
+    {email, "maxim@synrc.com"}, %% Github email
+    {password, "123"}, %% Github password
+    {repository, ""} %% Name of the repository with the app you want to run at your server
 ]}.
 
 {server, [
