--- a/apps/releaseman/priv/application.config
+++ b/apps/releaseman/priv/application.config
@@ -12,6 +12,6 @@
 ]}.
 
 {server, [
-    {docroot, "/home/chvanikoff/erlang/{REPO}"}, %% Where to clone repo and where to run git pull on updates
-    {domain, "http://site.com"} %% Your server domain or IP
+    {docroot, "repos/{REPO}"}, %% Where to clone repo and where to run git pull on updates
+    {domain, "http://synrc.com"} %% Your server domain or IP
 ]}.
