working build server

--- a/rels/release_manager/files/sys.config
+++ b/rels/release_manager/files/sys.config
@@ -1,6 +1,15 @@
 [
  {sync, [{sync_mode, nitrogen}]},
- {n2o, [{route,routes}]},
+ {n2o, [{route,releaseman_routes}]},
+ {releaseman, [
+    {nba, 10},
+    {port, 8989},
+    {url, "/github/hook"},
+    {username, "5HT"},
+    {email, "maxim@synrc.com"},
+    {password, ""},
+    {repository, "skyline"},
+    {domain, "http://synrc.com"}]},
  {mnesia, [{dir, "data"}]},
  {nsx_idgen, [{game_pool,5000000}]},
  {sasl,
