--- a/rels/release_manager/reltool.config
+++ b/rels/release_manager/reltool.config
@@ -7,11 +7,15 @@
          kernel,
          stdlib,
          sasl,
+         reltool,
          erts,
+         n2o,
+         mimetypes,
          mnesia,
          erlydtl,
          compiler,
          ssl,
+         sync,
          cowboy,
          observer,
          crypto,
@@ -41,6 +45,7 @@
            {mkdir, "log/sasl"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
+%           {copy_absolute, "/usr/lin/erlang/lib/erl_interface-*","lib"},
            {copy, "files/node", "bin/node"},
            {copy, "files/node.cmd", "bin/node.cmd"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
