--- a/rels/release_manager/reltool.config
+++ b/rels/release_manager/reltool.config
@@ -2,7 +2,7 @@
        {lib_dirs, ["../../apps","../../deps"]},
        {erts, [{mod_cond, derived}, {app_file, strip}]},
        {app_file, strip},
-       {rel, "node", "1",
+       {rel, "release", "1",
         [
          kernel,
          stdlib,
@@ -27,7 +27,7 @@
          kernel,
          stdlib
         ]},
-       {boot_rel, "node"},
+       {boot_rel, "release"},
        {profile, embedded},
        {incl_cond, derived},
        {mod_cond, derived},
@@ -39,14 +39,13 @@
        {app, releaseman, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
-{target_dir, "node"}.
+{target_dir, "release"}.
 
 {overlay, [
            {mkdir, "log/sasl"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-%           {copy_absolute, "/usr/lin/erlang/lib/erl_interface-*","lib"},
-           {copy, "files/node", "bin/node"},
+           {copy, "files/release", "bin/release"},
            {copy, "files/node.cmd", "bin/node.cmd"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
            {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
