--- a/apps/releaseman/rebar.config
+++ b/apps/releaseman/rebar.config
@@ -1,7 +1,7 @@
 {deps, [
     {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
     {sync,        ".*", {git, "git://github.com/doxtop/sync", "HEAD"}},
-    {erlydtl,       ".*", {git, "git://github.com/evanmiller/erlydtl.git", "HEAD"}},
+    {erlydtl,       ".*", {git, "git://github.com/voxoz/erlydtl.git", "HEAD"}},
     {n2o,           ".*", {git, "git://github.com/5HT/n2o",                "HEAD"}},
     {lager,       ".*", {git, "git://github.com/basho/lager", {tag,"1.2.2"}}}
 ]}.
