fix clean build

--- a/rels/release_manager/reltool.config
+++ b/rels/release_manager/reltool.config
@@ -36,6 +36,7 @@
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
        {app, hipe, [{mod_cond, app}, {incl_cond, exclude}]},
+       {app, ssh, [{mod_cond, app}, {incl_cond, include}]},
        {app, releaseman, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
