change builder for new n2o compatibilty

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,9 @@
 {deps_dir,["deps"]}.
 {deps, [
 ]}.
+{erlydtl_opts, [
+    {doc_root,   "priv/templates"},
+    {out_dir,    "ebin"},
+    {source_ext, ".html"},
+    {module_ext, "_view"}
+]}.
