--- a/apps/releaseman/rebar.config
+++ b/apps/releaseman/rebar.config
@@ -3,6 +3,7 @@
     {sync,        ".*", {git, "git://github.com/doxtop/sync", "HEAD"}},
     {erlydtl,       ".*", {git, "git://github.com/voxoz/erlydtl.git", "HEAD"}},
     {n2o,           ".*", {git, "git://github.com/5HT/n2o",                "HEAD"}},
+    {n2o_scripts, ".*", {git, "git://github.com/voxoz/n2o_scripts", "HEAD"}},
     {lager,       ".*", {git, "git://github.com/basho/lager", {tag,"1.2.2"}}}
 ]}.
 
