--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,8 +1,8 @@
 {sys, [
-       {lib_dirs, ["../../apps","../../deps"]},
+       {lib_dirs, ["../apps","../deps"]},
        {erts, [{mod_cond, derived}, {app_file, strip}]},
        {app_file, strip},
-       {rel, "release", "1",
+       {rel, "node", "1",
         [
          kernel,
          stdlib,
@@ -20,14 +20,15 @@
          observer,
          crypto,
          lager,
-         releaseman
+         releaseman,
+         builder
         ]},
        {rel, "start_clean", "",
         [
          kernel,
          stdlib
         ]},
-       {boot_rel, "release"},
+       {boot_rel, "node"},
        {profile, embedded},
        {incl_cond, derived},
        {mod_cond, derived},
@@ -36,19 +37,16 @@
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
        {app, hipe, [{mod_cond, app}, {incl_cond, exclude}]},
-       {app, ssh, [{mod_cond, app}, {incl_cond, include}]},
        {app, releaseman, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
-{target_dir, "release"}.
+{target_dir, "node"}.
 
 {overlay, [
            {mkdir, "log/sasl"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/release", "bin/release"},
-           {copy, "files/node.cmd", "bin/node.cmd"},
-           {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
+           {copy, "files/node", "bin/node"},
            {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
            {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
            {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
