--- a/run/sys.config
+++ b/run/sys.config
@@ -3,7 +3,7 @@
 
     {n2o, [
             {route,releaseman_routes},
-            {recompile_templates,true}
+            {recompile_templates,true}, {port, 8989}
         ]},
 
     {releaseman, [
