delete lots of code

--- a/run/sys.config
+++ b/run/sys.config
@@ -17,5 +17,7 @@
             {allowed_users, ["5HT", "doxtop", "voxoz", "synrc", "spawnproc", "proger"]}
         ]},
 
-    {mnesia, [{dir, "data"}]}
+    {mnesia, [{dir, "data"}]},
+
+    {lager, [{handlers, [ {lager_console_backend, info} ]}]}
 ].
