implement specific ref checkouts, store build info during build

--- a/run/sys.config
+++ b/run/sys.config
@@ -7,13 +7,16 @@
         ]},
 
     {releaseman, [
+            {hostname, "localhost"},
             {port, 8989},
+
             {url, "/github/hook"},
             {username, "5HT"},
             {email, "maxim@synrc.com"},
             {password, ""},
             {repository, "skyline"},
             {domain, "http://synrc.com"},
+
             {allowed_users, ["5HT", "doxtop", "voxoz", "synrc", "spawnproc", "proger"]}
         ]},
 
