--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,7 @@
 {lib_dirs,["apps"]}.
 {deps_dir,["deps"]}.
 {deps, [
+    {lager,       ".*", {git, "git://github.com/basho/lager", {tag,"1.2.2"}}}
 ]}.
 {erlydtl_opts, [
     {doc_root,   "priv/templates"},
