--- a/apps/builder/rebar.config
+++ b/apps/builder/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-    {erlsh, ".*", {git, "https://github.com/proger/erlsh", {branch, master}}}
+    {erlsh, ".*", {git, "git@github.com:proger/erlsh", "master"}}
 ]}.
