switching to active

--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,10 @@
 {lib_dirs,["apps"]}.
 {deps_dir,["deps"]}.
 {deps, [
-    {lager,       ".*", {git, "git://github.com/basho/lager", {tag,"1.2.2"}}}
+       {lager,    ".*", {git, "git@github.com:basho/lager", {tag,"1.2.2"}}}
+     , {active,   ".*", {git, "git@github.com:proger/active", "HEAD"}}
 ]}.
+
 {erlydtl_opts, [
     {doc_root,   "priv/templates"},
     {out_dir,    "ebin"},
