--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,13 @@
-{sub_dirs,["deps","apps"]}.
-{lib_dirs,["apps"]}.
-{deps_dir,["deps"]}.
+{sub_dirs,["apps"]}.
+
 {deps, [
-       {lager,    ".*", {git, "git@github.com:basho/lager", {tag,"1.2.2"}}}
-     , {active,   ".*", {git, "git@github.com:proger/active", "HEAD"}}
+       {lager,       ".*", {git, "git@github.com:basho/lager", {tag, "2.0.0"}}}
+     , {erlsh,       ".*", {git, "git@github.com:proger/erlsh", "HEAD"}}
+     , {active,      ".*", {git, "git@github.com:proger/active", "HEAD"}}
+     , {kvs_base,    ".*", {git, "git@github.com:proger/kvs_base", "HEAD"}}
+     , {erlydtl,     ".*", {git, "git@github.com:evanmiller/erlydtl", "HEAD"}}
+     , {n2o,         ".*", {git, "git@github.com:5HT/n2o", "HEAD"}}
+     , {n2o_scripts, ".*", {git, "git@github.com:synrc/n2o_scripts", "HEAD"}}
 ]}.
 
 {erlydtl_opts, [
