--- a/apps/rebar.config
+++ b/apps/rebar.config
@@ -1,3 +1,3 @@
-{sub_dirs, [
-        "releaseman", "builder"
-    ]}.
+{sub_dirs, ["releaseman"]}.
+{lib_dirs, ["../apps"]}.
+{deps_dir, ["../deps"]}.
