update n2o from master, fix port

--- a/apps/releaseman/rebar.config
+++ b/apps/releaseman/rebar.config
@@ -1,7 +1,7 @@
 {deps, [
     {sync,        ".*", {git, "git://github.com/doxtop/sync", "HEAD"}},
     {erlydtl,     ".*", {git,"git://github.com/evanmiller/erlydtl.git","HEAD"}},
-    {n2o,         ".*", {git, "git://github.com/5HT/n2o", {tag,"0.10.0"}}},
+    {n2o,         ".*", {git, "git://github.com/5HT/n2o", "HEAD"}},
     {n2o_scripts, ".*", {git, "git://github.com/voxoz/n2o_scripts", "HEAD"}},
     {lager,       ".*", {git, "git://github.com/basho/lager", {tag,"1.2.2"}}}
 ]}.
