--- a/rels/release_manager/files/sys.config
+++ b/rels/release_manager/files/sys.config
@@ -1,6 +1,6 @@
 [
  {sync, [{sync_mode, nitrogen}]},
- {n2o, [{port,8989},{route,cycle_route}]},
+ {n2o, [{cycle_port,8989},{route,cycle_route}]},
  {releaseman, [
     {nba, 10},
     {url, "/github/hook"},
